--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -2,48 +2,28 @@
    <h2>Peace of Mind Application</h2>
   <h3>Application Phase 1</h3>
 </header>
-<section>
+<section class="container">
   <article>
-    <div>
+    <div id="patient">
       <h2>Patient</h2>
     </div>
   </article>
     <article>
-    <div>
+    <div id="medication">
       <h2>Medications</h2>
     </div>
   </article>
    <article>
-    <div>
+    <div id="contact">
       <h2>Emergency Contact</h2>
     </div>
   </article>
     <article>
-    <div>
+    <div id="address">
       <h2>Address</h2>
-    </div>
-  </article>
-    <article>
-    <div>
-      <h2>Emoticon</h2>
-    </div>
-  </article>
-    <article>
-    <div>
-      <h2>Medication Logs</h2>
-    </div>
-  </article>
-    <article>
-    <div>
-      <h2>Feeling</h2>
-    </div>
-  </article>
-    <article>
-    <div>
-      <h2>Calender</h2>
     </div>
   </article>
 </section>
 <footer>
-  <h4>Made by Macharia Kuria</h4>
+  <span>&copy; Peace of Mind WCCI Final project</span>
 </footer>
