--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -54,7 +54,7 @@ div{
   position:relative;
   min-height: 280px;
   width: 100%;
-  background-color: background-color: #A9C9FF;
+  background-color: #A9C9FF;
   background-image: linear-gradient(45deg, #A9C9FF 0%, #FFBBEC 100%);
   border-radius: 15px;
   padding: 24px;
