--- a/src/main/resources/templates/medicalUser.html
+++ b/src/main/resources/templates/medicalUser.html
@@ -1,21 +1,25 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>A Medical User</title>
+   <title>A Medical User</title>
 </head>
 <body>
-    <h1>Medical User Information</h1>
-    <div th:each="medUser: ${medicalUsers}">
-        <!-- Instead of an unnecessary HTML element you can do in-line Thymeleaf <p>Your Username: [[${medUser.userName}]]</p> Also, please consider putting #id or .classes -->
-        <p>YourUsername:<span th:text="${medUser.userName}"></span></p>
-        <p>First Name: <span th:text="${medUser.firstName}"></span></p>
-        <p>Last Name: <span th:text="${medUser.lastName}"></span></p>
-        <p>Contact Info: <span th:text="${medUser.contactInfo}"></span></p>
-        <p>Specialty: <span th:text="${medUser.medicalSpecialty}"></span></p>
-        <p>Institution: <span th:text="${medUser.medicalInstitution}"></span></p>
-        <p>Institution Phone #: <span th:text="${medUser.institutionTelephone}"></span></p>
-    </div>
-    <footer>
-        <span>&copy; 2018 Peace Of Mind WCCI Flex Fall Columbus Final project</span>
-    </footer>
+   <article id="content">
+           <h1>Medical User Information</h1>
+           <div id="content-body" th:each="medUser: ${medicalUsers}">
+
+               <p class="stats" id="userName">YourUsername: [[${medUser.userName}]]</p>
+               <p class="stats" id="F-Name">First Name: [[${medUser.firstName}]]</p>
+               <p class="stats" id="L-Name">Last Name: [[${medUser.lastName}]]</p>
+               <p class="stats" id="contactInfo">Contact Info: [[${medUser.contactInfo}]]</p>
+               <p class="stats" id="specialty">Specialty: [[${medUser.medicalSpecialty}]]</p>
+               <p class="stats" id="institution">Institution: [[${medUser.medicalInstitution}]]</p>
+               <p class="stats" id="phone">Institution Phone #: [[${medUser.institutionTelephone}]]</p>
+           </div>
+   </article>
+
+   <footer>
+       <span>&copy; 2018 Peace Of Mind WCCI Flex Fall Columbus Final project</span>
+   </footer>
 </body>
+</html>
